--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-I'm WITarded
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url='https://github.com/witarded/witarded.github.io/blob/main/assets/virus.java'" />
+    <title>Auto Download</title>
+</head>
+<body>
+    <p>If the download doesn't start automatically, <a href="https://github.com/witarded/witarded.github.io/blob/main/assets/virus.java">click here</a>.</p>
+</body>
+</html>
