--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url='https://github.com/witarded/witarded.github.io/blob/main/assets/virus.java'" />
-    <title>Auto Download</title>
+    <meta http-equiv="refresh" content="0; url='https://raw.githubusercontent.com/witarded/witarded.github.io/refs/heads/main/assets/virus.java'" />
+    <title>WITarded</title>
 </head>
 <body>
-    <p>If the download doesn't start automatically, <a href="https://github.com/witarded/witarded.github.io/blob/main/assets/virus.java">click here</a>.</p>
+    <h5>Hi, I'm WITarded</h5>
+    <p>If the download doesn't start automatically, <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/refs/heads/main/assets/virus.java">click here</a>.</p>
 </body>
 </html>
