--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url='https://github.com/witarded/witarded.github.io/raw/refs/heads/main/assets/virus.zip'" />
-    <title>WITarded</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Witarded - Homepage</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h5>Hi, I'm WITarded</h5>
-    <p>If the download doesn't start automatically, <a href="https://github.com/witarded/witarded.github.io/raw/refs/heads/main/assets/virus.zip">click here</a>.</p>
+
+  <!-- Homepage Content -->
+  <div class="homepage">
+    <h1>Hi, I'm Witarded</h1>
+    <a href="/CC" class="btn">Compiler Construction Notes</a>
+  </div>
+
 </body>
 </html>
+
