--- a/CC/index.html
+++ b/CC/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Witarded CC</title>
+  <title>Compiler Construction Notes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,17 +27,66 @@
 
     <!-- Main Content Area -->
     <main id="main-content">
-      <div id="assignment" class="content-section">
-        <h2>Assignment</h2>
-        <a href="https://github.com/your-repo/assignment.pdf" download>Download Assignment PDF</a>
+      <div class="description">
+        <h3>Compiler Construction PPT</h3>
+        <div class="divider"></div>
+        <p>Just a collection of notes, assignments and question banks for 
+            Compiler Construction I've obtained by reverse engineering 
+            the CC application by S.M.Dol mam.
+        </p>
+        <p style="color: #abe8ff;">Click on the links below to download the PDFs.</p>
       </div>
+
+      <div id="assignment" class="content-section">
+        <p>.</p>
+        <h2>Assignments</h2>
+        <div class="tile-container">
+          <!-- Assignment PDF Links -->
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment1.pdf" class="tile" target="_blank">Assignment 1</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment2.pdf" class="tile" target="_blank">Assignment 2</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment3.pdf" class="tile" target="_blank">Assignment 3</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment4.pdf" class="tile" target="_blank">Assignment 4</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment5.pdf" class="tile" target="_blank">Assignment 5</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment6.pdf" class="tile" target="_blank">Assignment 6</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment7.pdf" class="tile" target="_blank">Assignment 7</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment8.pdf" class="tile" target="_blank">Assignment 8</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment9.pdf" class="tile" target="_blank">Assignment 9</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment10.pdf" class="tile" target="_blank">Assignment 10</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment11.pdf" class="tile" target="_blank">Assignment 11</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment12.pdf" class="tile" target="_blank">Assignment 12</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment13.pdf" class="tile" target="_blank">Assignment 13</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/assignment/Assignment14.pdf" class="tile" target="_blank">Assignment 14</a>
+        </div>
+      </div>
+      
       <div id="notes" class="content-section" style="display:none;">
         <h2>Notes</h2>
-        <a href="https://github.com/your-repo/notes.pdf" download>Download Notes PDF</a>
+        <div class="tile-container">
+          <!-- Notes PDF Links -->
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-I.pdf" class="tile" target="_blank">PPT Unit I</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-II.pdf" class="tile" target="_blank">PPT Unit II</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-III.pdf" class="tile" target="_blank">PPT Unit III</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-IV.pdf" class="tile" target="_blank">PPT Unit IV</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-V.pdf" class="tile" target="_blank">PPT Unit V</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-VI.pdf" class="tile" target="_blank">PPT Unit VI</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-VII.pdf" class="tile" target="_blank">PPT Unit VII</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/notes/PPTUnit-VIII.pdf" class="tile" target="_blank">PPT Unit VIII</a>
+        </div>
       </div>
+      
       <div id="question-bank" class="content-section" style="display:none;">
         <h2>Question Bank</h2>
-        <a href="https://github.com/your-repo/question-bank.pdf" download>Download Question Bank PDF</a>
+        <div class="tile-container">
+          <!-- Question Bank PDF Links -->
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-I.pdf" class="tile" target="_blank">QB Unit I</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-II.pdf" class="tile" target="_blank">QB Unit II</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-III.pdf" class="tile" target="_blank">QB Unit III</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-IV.pdf" class="tile" target="_blank">QB Unit IV</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-V.pdf" class="tile" target="_blank">QB Unit V</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-VI.pdf" class="tile" target="_blank">QB Unit VI</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-VII.pdf" class="tile" target="_blank">QB Unit VII</a>
+          <a href="https://raw.githubusercontent.com/witarded/witarded.github.io/main/CC/qb/QBUnit-VIII.pdf" class="tile" target="_blank">QB Unit VIII</a>
+        </div>
       </div>
     </main>
   </div>
