--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Homepage Content -->
   <div class="homepage">
     <h1>Hi, I'm Witarded</h1>
-    <a href="/CC" class="btn">Compiler Construction Notes</a>
+    <a href="/cc" class="btn">Compiler Construction Notes</a>
   </div>
 
 </body>
