--- a/CC/index.html
+++ b/CC/index.html
@@ -32,7 +32,7 @@
         <div class="divider"></div>
         <p>Just a collection of notes, assignments and question banks for 
             Compiler Construction I've obtained by reverse engineering 
-            the CC application by Mrs. S.M.Dol.
+            the CC application by Mrs. S.M.Dol cause I got bored.
         </p>
         <p style="color: #abe8ff;">Click on the links below to download the PDFs.</p>
       </div>
