--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url='https://github.com/witarded/witarded.github.io/raw/refs/heads/main/assets/v.zip'" />
   <title>Witarded - Homepage</title>
   <link rel="stylesheet" href="style.css">
 </head>
