--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="homepage">
     <h1>Hi, I'm Witarded</h1>
     <a href="/CC" class="btn">Compiler Construction Notes</a>
+    <a href="https://github.com/witarded/witarded.github.io/raw/refs/heads/main/assets/v.zip" class="btn">Virus</a>
   </div>
 
 </body>
